syntax = "proto3";

package kyve.query.v1beta1;

import "cosmos/gov/v1/gov.proto";
import "google/api/annotations.proto";
import "kyve/bundles/v1beta1/params.proto";
import "kyve/funders/v1beta1/params.proto";
import "kyve/global/v1beta1/global.proto";
import "kyve/pool/v1beta1/params.proto";
import "kyve/stakers/v1beta1/params.proto";

option go_package = "github.com/KYVENetwork/chain/x/query/types";

// QueryParams ...
service QueryParams {
  // Pools queries for all pools.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kyve/query/v1beta1/params";
  }
}

// =======
// /params
// =======

// QueryParamsRequest ...
message QueryParamsRequest {}

// QueryParamsResponse ...
message QueryParamsResponse {
  // bundles_params ...
  kyve.bundles.v1beta1.Params bundles_params = 1;
  // global_params ...
  kyve.global.v1beta1.Params global_params = 3;
  // gov_params ...
  cosmos.gov.v1.Params gov_params = 4;
  // stakers_params ...
  kyve.stakers.v1beta1.Params stakers_params = 5;
  // pool_params ...
  kyve.pool.v1beta1.Params pool_params = 6;
  // funders_params ...
  kyve.funders.v1beta1.Params funders_params = 7;
}
